fix: Fix wrapping of 'Cancelled' access key in modal

--- a/src/ui/EditTask.scss
+++ b/src/ui/EditTask.scss
@@ -82,7 +82,7 @@
 
 .tasks-modal-dates {
     display: grid;
-    grid-template-columns: 5.5em auto;
+    grid-template-columns: 6.0em auto;
     column-gap: .5em;
     row-gap: 5px;
 }
